# dunai-gui-virtual

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  dunai-gui-virt.cabal  flake.nix
app/: Main.hs
app/FRP/: Dynamic.hs
app/FRP/GUI/: Renderable.hs  State.hs  Widgets.hs
dunai-gui-test/: CHANGELOG.md  LICENSE  dunai-gui-test.cabal
dunai-gui-test/app/: Main.hs
dunai-gui-virt/: README.md  dunai-gui-virt.cabal
dunai-gui-virt/app/FRP/: Dynamic.hs
dunai-gui-virt/app/FRP/GUI/: AddHandler.hs  GUI.hs  Renderable.hs  State.hs  Utils.hs  Widgets.hs
tests/: DynamicTest.hs
