cabal-version:      2.4
name:               dunai-gui-virt
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Cajunvoodoo
maintainer:         tomdwy1008@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    -- main-is:          Main.hs
    -- other-modules: FRP.Dynamic
    --              , FRP.GUI.Widgets
    exposed-modules: Main
                   , FRP.Dynamic
                   , FRP.GUI.Widgets
                   , FRP.GUI.Renderable
                   , FRP.GUI.State
                   , FRP.GUI.AddHandler
                   , FRP.GUI.Utils

    -- LANGUAGE extensions used by modules in this package.
    default-extensions: DeriveFunctor
                      , Arrows
                      , TypeFamilies
                      , DataKinds
                      , AllowAmbiguousTypes
                      , RecursiveDo
                      , OverloadedLabels
                      , OverloadedStrings
                      , DuplicateRecordFields

    build-depends:    base ^>=4.16.4.0
                    , bearriver
                    , dunai
                    , mtl
                    , containers
                    , gi-gtk >= 4.0.1
                    , gi-glib > 2.0.23 || < 2.0.0
                    , gi-gio
                    , gi-gdk
                    , haskell-gi-base
                    , text
                    , dear-imgui
                    , OpenGLRaw
                    , sdl2
                    , managed
                    , free
                    , Diff
                    , StateVar

    -- ghc-options: -O2

    hs-source-dirs:   app
    default-language: GHC2021

test-suite dynamic
    type: exitcode-stdio-1.0
    main-is: DynamicTest.hs
    default-extensions: DeriveFunctor
                      , Arrows
                      , TypeFamilies
    hs-source-dirs: tests
    build-depends: base
                 , dunai-gui-virt
                 , dunai-test
                 , QuickCheck
                 , bearriver
    default-language: GHC2021
